# novelty_checker

./: .gitignore  hello.py  pyproject.toml
docs/: prd.md
notebooks/: hasanyone_results.json  hasanyone_results_question_yes_no.csv  hasanyone_results_question_yes_no.json  hasanyone_results_question_yes_no_split.csv  scrapping_hasanyone.ipynb  tessting.ipynb
results/: evaluation_results_10_True_0.3_gemini_gemini-2.0-flash-exp_20241228-213229.json  evaluation_results_10_True_0.5_gemini_gemini-2.0-flash-exp_20241228-213942.json  evaluation_results_10_True_0.7_gemini_gemini-2.0-flash-exp_20241228-214653.json
src/backend/: __init__.py  analyze_results.py  business_logic.py  cli.py  config.py  exa_integration.py  gemini_integration.py  logger.py  main.py  model_evaluation.py  models.py  run_evaluations.py  scorers.py  test.html  utils.py
src/scripts/: flip_results.py
